# geometry_kernel

./: Cargo.toml  readme.txt
res_of_tests/robust_bool_op/main/: union_res.stl
res_of_tests/simple_bool_op/main/: union_res.stl
src/: lib.rs  main.rs
src/bool_op/: common.rs  mod.rs  robust_bool_ops.rs
src/intersect/: line_x_line.rs  line_x_plane.rs  line_x_segment.rs  mesh_x_mesh.rs  mod.rs  plane_x_plane.rs  point_wrapper.rs  segment_x_segment.rs  triangle_x_triangle.rs  tuple_iter.rs
src/matrix/: matrix.rs  mod.rs
src/primitives/: line.rs  mesh.rs  mod.rs  number.rs  number_impl_big_rational.rs  number_impl_gmp.rs  number_trait.rs  plane.rs  point.rs  polygon.rs  segment.rs  signed_trait.rs  to_2d_trait.rs  triangle.rs  vector.rs  zero_trait.rs
src/triangulation/: ear_clipping_triangulation.rs  incremental_triangulation.rs  mod.rs  triangulation3d.rs
